--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="seccion">
             <img src="imagenes/LOGO.jpg" alt="logo empresa" class="logo">
-            <button class="accesos">Accede A Tu Cuenta</button>
-            <button class="accesos">Crea Tu Cuenta</button>
-            <button class="accesos">Acerca de Nosotros</button>
+            <a href="html/Logeo.html" class="accesos">Accede A Tu Cuenta</a>
+            <a href="html/Registrate.html" class="accesos">Crea Tu Cuenta</a>
+            <a href="html/Logeo.html" class="accesos">Acerca de Nosotros</a>
         </div>
     </body>
 </html>
