--- a/html/Bienvenida.html
+++ b/html/Bienvenida.html
@@ -3,6 +3,7 @@
     <head>
         <title>InstaBus</title>
         <link href="/css/estilo.css" rel=stylesheet>
+        <link href="/css/estilob.css" rel=stylesheet>
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
@@ -11,7 +12,7 @@
             <h2>¡Bienvenido!</h2>
             <h2>Usuario_Generico 249</h2>
             <h3>¡Checa tu Ruta!</h3>
-            <img src="/imagenes/mapa.png" alt="mapa" class="marco">
+            <a href="mapa.html" class="imgenlace"><img src="/imagenes/mapa.png" alt="mapa" class="map"></a>
             <h3>¡Entra a nuestro chat!</h3>
             <img src="/imagenes/Chat.png" alt="mapa" class="marco">
         </div>
