Se actualizo el diseño

--- a/html/Registrate.html
+++ b/html/Registrate.html
@@ -8,7 +8,7 @@
     <body>
         <div class="seccion">
             <img src="/imagenes/LOGO.jpg" alt="logo empresa" class="logo">
-            <h2>¡Registra tu cuenta!</h2>
+            <h2>¡Únete a nosotros!</h2>
             <label >Usuario</label>
             <input type="text" class="dat"> 
             <label>Contraseña</label>
