--- a/html/Bienvenida.html
+++ b/html/Bienvenida.html
@@ -11,7 +11,7 @@
             <img src="/imagenes/LOGO.jpg" alt="logo empresa" class="logo">
             <h2>¡Bienvenido!</h2>
             <h2>Usuario_Generico 249</h2>
-            <h3>¡Checa tu Ruta!</h3>
+            <h3>Checa tu Ruta</h3>
             <a href="mapa.html" class="imgenlace"><img src="/imagenes/mapa.png" alt="mapa" class="map"></a>
             <h3>¡Entra a nuestro chat!</h3>
             <img src="/imagenes/Chat.png" alt="mapa" class="marco">
