--- a/html/Bienvenida.html
+++ b/html/Bienvenida.html
@@ -14,7 +14,7 @@
             <h3>Checa tu Ruta</h3>
             <a href="mapa.html" class="imgenlace"><img src="/imagenes/mapa.png" alt="mapa" class="map"></a>
             <h3>¡Entra a nuestro chat!</h3>
-            <img src="/imagenes/Chat.png" alt="mapa" class="marco">
+            <a href="mapa.html" class="imgenlace"><img src="/imagenes/Chat.png" alt="mapa" class="map"></a>        
         </div>
     </body>
 </html>
