--- a/html/Bienvenida.html
+++ b/html/Bienvenida.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="seccion">
-            <img src="/imagenes/LOGO.jpg" alt="logo empresa" class="logo">
+            <img src="/imagenes/newlogo.png" alt="logo empresa" class="logo">
             <h2>¡Bienvenido!</h2>
             <h2>Usuario_Generico 249</h2>
             <h3>Checa tu Ruta</h3>
