--- a/html/Logeo.html
+++ b/html/Logeo.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="seccion">
-            <img src="/imagenes/LOGO.jpg" alt="logo empresa" class="logo">
+            <img src="/imagenes/newlogo.png" alt="logo empresa" class="logo">
             <h2>¡Inicia Sesion en tu cuenta!</h2>
             <label >Usuario</label>
             <input type="text" class="dat"> 
