--- a/html/mapa.html
+++ b/html/mapa.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <img src="/imagenes/LOGO.jpg" alt="logo empresa" class="logo">
+            <img src="/imagenes/newlogo.png" alt="logo empresa" class="logo">
         </nav>
         <main>
             <div class="seccion">
