--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="seccion">
-            <img src="imagenes/LOGO.jpg" alt="logo empresa" class="logo">
+            <img src="imagenes/newlogo.png" alt="logo empresa" class="logo">
             <a href="html/Logeo.html" class="accesos">Accede A Tu Cuenta</a>
             <a href="html/Registrate.html" class="accesos">Crea Tu Cuenta</a>
             <a href="html/Logeo.html" class="accesos">Acerca de Nosotros</a>
