--- a/html/Logeo.html
+++ b/html/Logeo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "es">
     <head>
-        <title>InstaBus</title>
+        <title>BusCheck</title>
         <link href="/css/estilo.css" rel=stylesheet>
         <meta name="viewport" content="width=device-width">
     </head>
