--- a/html/mapa.html
+++ b/html/mapa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "es">
     <head>
-        <title>InstaBus</title>
+        <title>BusCheck</title>
         <link href="/css/estiloc.css" rel=stylesheet>
         <meta name="viewport" content="width=device-width">
     </head>
@@ -12,13 +12,13 @@
         <main>
             <div class="seccion">
                 <div class="dropdown">
-                    <button class="dropbtn">Dropdown</button>
+                    <button class="dropbtn">Rutas Disponibles</button>
                     <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+                        <a href="#">Ruta 27</a>
+                        <a href="#">Ruta 9</a>
                     </div>
                 </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29563.23431127074!2d-100.97079457742915!3d22.148677610111918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1573111599827!5m2!1ses-419!2smx" width="800" height="600"  allowfullscreen="" class="mapa"></iframe>
             </div>
         </main>
     </body>
