--- a/html/mapa.html
+++ b/html/mapa.html
@@ -18,8 +18,13 @@
                         <a href="#">Ruta 9</a>
                     </div>
                 </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29563.23431127074!2d-100.97079457742915!3d22.148677610111918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1573111599827!5m2!1ses-419!2smx" width="800" height="600"  allowfullscreen="" class="mapa"></iframe>
+                <div class="mapadiv">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29563.23431127074!2d-100.97079457742915!3d22.148677610111918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1573111599827!5m2!1ses-419!2smx" width="800" height="600"  allowfullscreen="" class="mapa"></iframe>
+                </div>
             </div>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
