--- a/html/mapa.html
+++ b/html/mapa.html
@@ -52,7 +52,7 @@
                     <li>Nuestra pagina de Facebook: <a href="#"><i class="fab fa-facebook-f"></i> TIAM SLP</a></li>
                 </ul>
             </div>
-            <a href="#"><b>Cerrar Sesión</b></a> 
+            <a href="/index.html"><b>Cerrar Sesión</b></a> 
         </div>
     </footer>
 </body>
